# E-exam-prepare

./: .env.example  .gitignore  CUSTOM_PROVIDERS_GUIDE.md  DOCS_INDEX.md  FEATURES_ADDED_Feb24.md  GROQ_CHANGES.md  GROQ_COMPLETE.md  GROQ_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  SETUP_GUIDE.md  docker-compose.dev.yml  docker-compose.yml  package.json  pyproject.toml  quick_start.sh  seed_documents.sql  verify-groq.sh  verify_integration.py
.github/: copilot-instructions.md
backend/: .dockerignore  Dockerfile  alembic.ini  amp  pyproject.toml  seed_db.py  seed_subjects.py  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0_initial_create_all_tables.py  3295efca321d_add_document_sharing_user_education_.py  a1b2c3d4e5f6_add_subjects_practice_sessions.py  b2c3d4e5f6g7_add_driving_level_and_driving_manual.py  c3d4e5f6g7h8_add_account_type_to_users.py
backend/app/: __init__.py  celery_app.py  config.py  main.py  tasks.py
backend/app/api/: __init__.py  admin.py  attempts.py  chat.py  deps.py  documents.py  health.py  practice.py  progress.py  quiz.py  rag.py  subjects.py  users.py
backend/app/core/: __init__.py  security.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/schemas/: __init__.py  admin.py  attempt.py  common.py  document.py  practice.py  progress.py  quiz.py  subject.py  user.py
backend/app/services/: __init__.py  grading.py  rag_cache.py  rag_client.py  rate_limiter.py
backend/scripts/: unify_driving_data.py
backend/tests/: conftest.py  test_documents.py  test_documents_enhanced.py  test_fk_fix.py  test_integration_redis.py  test_practice.py  test_subjects.py  test_users.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  COMPLETION_CHECKLIST.md  CUSTOM_PROVIDERS_GUIDE.md  DEVELOPMENT.md  DOCS_INDEX.md  GROQ_CHANGES.md  GROQ_COMPLETE.md  GROQ_INTEGRATION.md  GROQ_SETUP.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION.md  MIGRATION_GUIDE.md  PROVIDER_SETUP.md  RAG_INTEGRATION.md  SETUP_GUIDE.md
frontend/: .dockerignore  DEVELOPMENT.md  Dockerfile  INTEGRATION.md  README.md  eslint.config.mjs  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo
frontend/__tests__/: integration.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: AuthGuard.tsx  Navbar.tsx  PDFViewerModal.tsx
frontend/config/: constants.ts
nginx/: nginx.conf
rag-service/: .dockerignore  Dockerfile  GROQ_SETUP.md  PROVIDER_SETUP.md  RAG_INTEGRATION.md  pyproject.toml  start.sh
rag-service/app/: __init__.py  config.py  main.py  providers.py
rag-service/app/embeddings/: __init__.py  gemini_embedding.py
rag-service/app/llms/: __init__.py  gemini_llm.py  groq_llm.py
rag-service/app/rag/: __init__.py  engine.py  groq_ocr.py  image_extractor.py  web_search.py
rag-service/app/routes/: __init__.py  explore.py  images.py  ingest.py  ocr.py  query.py  retrieve.py  search.py
rag-service/scripts/: merge_driving_collections.py
rag-service/tests/: test_ocr.py
scripts/: check_pdfs.py  ingest_driving.py  reingest_pending.py  reset_docs.py
web-scrap/: improved_scraper.py  main.py  pyproject.toml
(+30 files in other folders)
