[project]
name = "e-exam-prepare"
version = "0.1.0"
description = "Personalized exam preparation platform with RAG-powered adaptive learning"
readme = "README.md"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["backend", "rag-service", "web-scrap"]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
]
